src/apps/error/testing/operon/webServices/citations.js
export const Citations = `
citations {
    publication {
      id
      authors
      pmid
      citation
      url
      title
      year
    }
    evidence {
      id
      name
      code
      type
    }
 }`